--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
-    "redux-saga": "^0.16.0"
+    "redux-saga": "^0.16.0",
+    "styled-components": "^3.2.5"
   },
   "scripts": {
     "start": "react-scripts start",
