--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
     "redux-saga": "^0.16.0",
+    "semantic-ui-react": "^0.79.1",
     "styled-components": "^3.2.5"
   },
   "scripts": {
